# squeaky-hinge

./: .gitignore  LICENSE  README.md  auth.py  cli.ts  conversations.py  drizzle.config.ts  package.json  pyproject.toml  reader.py  recaptcha.html  recaptcha.py  squeaky_hinge.py  squeaky_hinge_config.py
drizzle/: 0000_dazzling_santa_claus.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
src/: extract-auth-from-prefs.ts  index.ts  util.ts
src/api/: const.ts  index.ts  rec.ts
src/auto/: auth.ts  start_session.ts  util.ts
src/db/: db.ts  migrate.ts  schema.ts
